--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
   },
   "homepage": "https://github.com/ortooapp/ortoo-api#readme",
   "dependencies": {
+    "apollo-server": "^2.9.3",
     "apollo-server-micro": "^2.9.3",
     "graphql": "^14.5.6",
-    "micro": "^9.3.4"
+    "micro": "^9.3.4",
+    "prisma-client-lib": "^1.34.8"
+  },
+  "engines": {
+    "node": ">=8.0.0 <11.0.0"
   }
 }
