--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "apollo-server": "^2.9.3",
     "apollo-server-micro": "^2.9.3",
     "graphql": "^14.5.6",
+    "lodash": "^4.17.15",
     "micro": "^9.3.4",
     "prisma-client-lib": "^1.34.8"
   },
