--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "apollo-server": "^2.9.3",
     "apollo-server-micro": "^2.9.3",
+    "bcryptjs": "^2.4.3",
     "graphql": "^14.5.6",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "micro": "^9.3.4",
     "prisma-client-lib": "^1.34.8"
