--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "ortoo-api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "micro"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "micro": "^9.3.4",
+    "micro-cors": "^0.1.1",
     "prisma-client-lib": "^1.34.8"
   },
   "engines": {
