--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "apollo-server": "^2.9.3",
     "apollo-server-micro": "^2.9.3",
+    "aws-sdk": "^2.532.0",
     "bcryptjs": "^2.4.3",
     "graphql": "^14.5.6",
     "jsonwebtoken": "^8.5.1",
